--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <h1>@avishkarkubal</h1>
     <nav>
       <a href="#gallery">Gallery</a>
-      <a href="#downloads">Notes</a>
+      <a href="#downloads">Notes & Videos</a>
       <a class="email-link" href="mailto:xcom.ak@proton.me">Email</a>
       <button class="dark-toggle" onclick="toggleDarkMode()"><span>Dark Mode</span></button>
     </nav>
@@ -276,7 +276,7 @@
   <section class="hero">
     <video src="video1.mp4" autoplay loop muted playsinline></video>
     <h2>Avishkar Kubal</h2>
-    <p>I'm into Computers and Nature...</p>
+    <p>Growing...</p>
   </section>
 
   <section class="gallery" id="gallery">
@@ -296,12 +296,31 @@
     <h3>My Notes</h3>
     <div class="grid">
       <div class="note">
-        <p>HTML Notes - Proton Drive</p>
-        <a href="https://drive.proton.me/urls/33N1B884X8#fgJC9EZrH0XZ" target="_blank">Download PDF</a>
+        <p>HTML Notes</p>
+        <a href="https://drive.google.com/file/d/1-F3v_X9nmPElNF_Oiv5wgQUe19oh2TiH/view?usp=drivesdk" target="_blank">Read/Download</a>
       </div>
       
     </div>
   </section>
+
+  <section class="downloads" id="videos">
+  <h3>My Videos</h3>
+  <div class="grid">
+    <div class="note">
+      <p>Lord Shiva</p>
+      <a href="https://youtu.be/Y3yUVlzLL68" target="_blank">Watch Now!</a>
+    </div>
+    <div class="note">
+      <p>Raindrops</p>
+      <a href="https://youtu.be/gz5EpYLl1Kw" target="_blank">Watch Now!</a>
+    </div>
+    <div class="note">
+      <p>Devotion</p>
+      <a href="https://youtu.be/6taVEZl29MAk" target="_blank">Watch Now!</a>
+    </div>
+  </div>
+</section>
+
 
   <div class="lightbox" id="lightbox">
     <img src="" alt="Enlarged image">
