--- a/index.html
+++ b/index.html
@@ -282,13 +282,27 @@
   <section class="gallery" id="gallery">
     <h3>My Clicks / Gallery</h3>
     <div class="grid">
-      <img src="img2.jpg" alt="Gallery image 1">
-      <img src="img3.jpg" alt="Gallery image 2">
-      <img src="img4.jpg" alt="Gallery image 3">
-      <img src="img5.jpg" alt="Gallery image 4">
-      <img src="img6.jpg" alt="Gallery image 5">
-      <img src="img7.jpg" alt="Gallery image 6">
-      <img src="img8.jpg" alt="Gallery image 7">
+    <img src="https://www.dropbox.com/scl/fi/qb7jpixghzkzrm5owa497/IMG_20231115_124207.jpg?rlkey=puz1d0ja0is400czjiqi64dx4&st=zd7c3h7n&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/7qok2ox90pkc9als4n445/IMG_20231115_124427.jpg?rlkey=gst3puz4yd4zha469j01zmyb7&st=jjn35o4q&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/yl7ulsbdhidm8bltsgg0v/IMG_20231115_124629.jpg?rlkey=lcmeelkcavz2fbptu6wl9vnmw&st=bf0tojie&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/vjejurzf63s6ublyauyeo/IMG_20231125_093724.jpg?rlkey=5d5nb72l5fujn9coe2kc804uh&st=wp2ukrzq&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/2bvjju9tr5qxt8tp77cb9/IMG_20231125_100041.jpg?rlkey=us75pp2cs9iyt64lgpcjbbwes&st=j3i7mmdr&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/v94ir3xalpsn852y97yp8/IMG_20231125_133615-EFFECTS.jpg?rlkey=0hmbgn1yfhayrvx4idvzqhshv&st=kf9gvbu0&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/msmin122eapnwsdgrjyq2/IMG_20231125_133627.jpg?rlkey=xufoyx5cnn39uzjts7s0vq3uf&st=z49pleto&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/xjvgdb7ucol5lh2bbdbk8/IMG_20231125_153430.jpg?rlkey=r3nome56vpurdcgvcslgcpdl5&st=s3oyb26b&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/94aryx80a7vjvkdic1lby/IMG_20231125_153433.jpg?rlkey=up0hufmks6uujv6hgvizxxn5w&st=f0goykyi&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/t122cclx6w9gazbyvmzuv/IMG_20231125_153522.jpg?rlkey=e0xu3i3u29kwnapxudx7b1dnz&st=g4ukbchu&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/elgvz5le8mcm4mhenqzej/IMG_20231125_153556.jpg?rlkey=6c5cgjy88qee4tms5hb0hzqbu&st=fcz6qjlb&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/wbflyxopin131mtnyl9gg/IMG_20231125_154032.jpg?rlkey=nbme0k2na1ghrwa2ysxjfo8a7&st=nr014fmx&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/wbflyxopin131mtnyl9gg/IMG_20231125_154032.jpg?rlkey=nbme0k2na1ghrwa2ysxjfo8a7&st=4l0kc2b4&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/3tl54tvm4lic2n31srh4v/IMG_20231125_154042.jpg?rlkey=jxt976jfwxq175puedzq8eglm&st=u7c9pj14&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/4tgmndcvfmeklum59u249/IMG_20241011_183510.jpg?rlkey=o1oruuztvlqles0f8gkkr7ydp&st=z009xhjc&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/vljzy65mdyky5mi1292tj/IMG_20241011_183554.jpg?rlkey=s39yh0hr5lo57cjb8ochw1fo0&st=v0bjzgah&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/rg10vivkwtv4zkw0fj5vj/IMG_20241011_183614.jpg?rlkey=i8ovx3ac0aehlmvaoszgvv073&st=nwikkpd7&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/o8ugfuoe4shwulq741kjf/IMG_20241011_183642.jpg?rlkey=l1j9pe5wjyregj7pvr6tv5w0c&st=tqpknmfm&raw=1" alt="Gallery image 1">
+    <img src="https://www.dropbox.com/scl/fi/ujcyr9ki7vfp5vhsdnz2z/IMG_20241011_183702.jpg?rlkey=ovok04uc637fefwzwe9mva6u6&st=qf7sbqs4&raw=1" alt="Gallery image 1">
+      <img src="https://www.dropbox.com/scl/fi/rjdds6ispe84huk267djl/IMG_20241011_183718.jpg?rlkey=7g6b764s0i4oaj0ra94fc153f&st=n33zbfyl&raw=1" alt="Gallery image 1">
+      
     </div>
   </section>
 
@@ -297,7 +311,7 @@
     <div class="grid">
       <div class="note">
         <p>HTML Notes</p>
-        <a href="https://drive.google.com/file/d/1-F3v_X9nmPElNF_Oiv5wgQUe19oh2TiH/view?usp=drivesdk" target="_blank">Read/Download</a>
+        <a href="https://www.dropbox.com/scl/fi/o1mc29pov4cmw6culkovb/HTML-Notes-AGK.pdf?rlkey=gvwto6mabaimaop8j31hc4eem&st=e32s7mcp&raw=1" target="_blank">Read/Download</a>
       </div>
       
     </div>
@@ -307,16 +321,16 @@
   <h3>My Videos</h3>
   <div class="grid">
     <div class="note">
-      <p>Lord Shiva</p>
-      <a href="https://youtu.be/Y3yUVlzLL68" target="_blank">Watch Now!</a>
+      <p>Lord Shiva (1080p)</p>
+      <a href="https://www.dropbox.com/scl/fi/8bwxsjh74xkhmxhuexzg6/lv_0_20240930155141.mp4?rlkey=kwx85to4c1m0agz9a3v4wm7ei&st=af8ai855&dl=0" target="_blank">Watch/Download from Cloud</a>
     </div>
     <div class="note">
-      <p>Raindrops</p>
-      <a href="https://youtu.be/gz5EpYLl1Kw" target="_blank">Watch Now!</a>
+      <p>Raindrops (1080p)</p>
+      <a href="https://www.dropbox.com/scl/fi/r22hemdb1d2nmchdz5y9x/video_20240716_073407.mp4?rlkey=gixwx7gxn0li2fva2wcqjr9ln&st=83uxgcfb&dl=0" target="_blank">Watch/Download from Cloud</a>
     </div>
     <div class="note">
-      <p>Devotion</p>
-      <a href="https://youtu.be/6taVEZl29MAk" target="_blank">Watch Now!</a>
+      <p>Devotion (1080p)</p>
+      <a href="https://www.dropbox.com/scl/fi/547o82w9otuf6bdl6qdk9/video_20240716_074322.mp4?rlkey=hvf4revfdbgo9juak8nkqgjdi&st=53jbrjoh&dl=0" target="_blank">Watch/Download from Cloud</a>
     </div>
   </div>
 </section>
